[package]
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"
name = "manning-lp-async-rust-project-1-m1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12", features = ["tokio1", "attributes","unstable"]}
clap = {version = "4.4", features = ["derive"]}
async-trait = "0.1"
futures = "0.3.29"
time = { version = "0.3" , features = ["parsing"]}
yahoo_finance_api = { version = "2.1" }
